--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-project",
+  "name": "wp-react-hmr-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,16 +25,11 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@hot-loader/react-dom": "^17.0.1+4.13.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^2.9.0",
     "autoprefixer": "^10.2.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
